--- a/stile/stile.css
+++ b/stile/stile.css
@@ -146,9 +146,15 @@ a {
 .containerCompetenze{
     /*background-color: #8c93a6;*/
    
-    margin-top: 15%;
+    
+
 
 }
+
+.competenze{
+
+}
+
 
 
 
