--- a/stile/stile.css
+++ b/stile/stile.css
@@ -214,6 +214,68 @@ a {
 }
 
 
+/* Sfondo scuro */
+.overlay {
+  display: none; /* nascosto di default */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  justify-content: center;
+  align-items: center;
+}
+
+/* Contenuto del popup */
+.popup {
+  background: #818181;
+  font-size: 18px;
+  color:white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 30%;
+  text-align: center;
+  position: relative;
+  animation: fadeIn 0.3s ease;
+}
+
+h3{
+
+    font-size: 24px;
+    color: #98A5D9;
+
+}
+
+.pupup ul, li{
+
+    text-align: left;
+    
+
+}
+
+/* Bottone chiusura */
+.close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  cursor: pointer;
+  font-size: 30px;
+}
+
+/* Animazione */
+@keyframes fadeIn {
+  from { opacity: 0; transform: scale(0.8); }
+  to { opacity: 1; transform: scale(1); }
+}
+
+
+
+
+
+
+
+
 
 
 /* Mobile / small screens */
